--- a/Sprint0/Task0.ipynb
+++ b/Sprint0/Task0.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -135,8 +135,127 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Минимальное значение: 1\n",
+      "Максимальное значение: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "int[] numbers = { 5, 8, 1, 3, 9, 6, 7, 2 };\n",
+    "int minValue = numbers.Min();\n",
+    "int maxValue = numbers.Max();\n",
+    "Console.WriteLine($\"Минимальное значение: {minValue}\");\n",
+    "Console.WriteLine($\"Максимальное значение: {maxValue}\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Сумма всех элементов: 41\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "int total = numbers.Sum();\n",
+    "Console.WriteLine($\"Сумма всех элементов: {total}\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Среднее арифметическое: 5.125\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "double average = (double)total / numbers.Length;\n",
+    "Console.WriteLine($\"Среднее арифметическое: {average}\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Отсортированный массив в порядке возрастания: 1, 2, 3, 5, 6, 7, 8, 9\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "int[] sortedNum = numbers.OrderBy(n => n).ToArray();\n",
+    "Console.WriteLine($\"Отсортированный массив в порядке возрастания: {string.Join(\", \", sortedNum)}\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Содержит ли массив число 3: Содержит\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "int numberCheck = 3; \n",
+    "bool contains = numbers.Contains(numberCheck);\n",
+    "if (contains) {\n",
+    "    Console.WriteLine($\"Содержит ли массив число {numberCheck}: Содержит\");\n",
+    "}\n",
+    "else Console.WriteLine($\"Содержит ли массив число {numberCheck}: Не содержит\");"
+   ]
   },
   {
    "attachments": {
