--- a/Sprint0/Task3.ipynb
+++ b/Sprint0/Task3.ipynb
@@ -28,15 +28,23 @@
     "\n",
     "Создать базовый класс Project в C#, который будет представлять проекты в рамках организации. На основе этого класса разработать 2-3 производных класса,\n",
     "демонстрирующих принципы наследования и полиморфизма. В каждом из классов должны быть реализованы новые атрибуты и методы, а также переопределены некоторые методы базового класса для демонстрации полиморфизма.\n",
+    "\n",
     "Требования к базовому классу Project:\n",
+    "\n",
     "• Атрибуты: ID проекта (ProjectId), Название проекта (ProjectName), Статус\n",
     "проекта (Status).\n",
+    "\n",
     "• Методы:\n",
+    "\n",
     "o UpdateStatus(): метод для обновления статуса проекта.\n",
+    "\n",
     "o GetProjectDetails(): метод для получения деталей проекта.\n",
+    "\n",
     "o AssignTeamMember(): метод для назначения командного члена\n",
     "проекту.\n",
+    "\n",
     "Требования к производным классам:\n",
+    "\n",
     "1. ПродуктовыйПроект (ProductProject): Должен содержать дополнительные\n",
     "атрибуты, такие как Ожидаемая дата завершения (ExpectedCompletionDate).\n",
     "Метод UpdateStatus() должен быть переопределен для включения\n",
@@ -73,121 +81,111 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Статус проекта 'Проект по ООП' обновлён на: Готов\n",
+      "ID: 1, Название: Проект по ООП, Статус: Готов\n",
+      "Член команды 'Саша' назначен на проект 'Проект по ООП'.\n",
+      "ID: 2, Название: Исследовательский проект по физике, Статус: Выполняется\n",
+      "Член команды 'Вика' с навыками в области исследований назначен на проект 'Исследовательский проект по физике'.\n",
+      "Статус проекта 'Исследовательский проект по физике' обновлён на: На удержании\n",
+      "ID: 2, Название: Исследовательский проект по физике, Статус: На удержании\n"
+     ]
+    }
+   ],
    "source": [
-    "public class Event\n",
+    "public class Project\n",
     "{\n",
-    "    public int EventId { get; set; }\n",
-    "    public string EventName { get; set; }\n",
-    "    public DateTime Date { get; set; }\n",
-    "    protected List<string> participants;\n",
-    "\n",
-    "    public Event(int eventId, string eventName, DateTime date)\n",
+    "    public int ProjectId { get; set; }\n",
+    "    public string ProjectName { get; set; }\n",
+    "    public string Status { get; set; }\n",
+    "    public Project(int id, string name, string status)\n",
     "    {\n",
-    "        EventId = eventId;\n",
-    "        EventName = eventName;\n",
-    "        Date = date;\n",
-    "        participants = new List<string>();\n",
+    "        ProjectId = id;\n",
+    "        ProjectName = name;\n",
+    "        Status = status;\n",
     "    }\n",
     "\n",
-    "    public virtual void RegisterParticipant(string participant)\n",
+    "    public virtual void UpdateStatus(string newStatus)\n",
     "    {\n",
-    "    participants.Add(participant);\n",
-    "    Console.WriteLine($\"Участник {participant} зарегистрирован на мероприятие {EventName}.\");\n",
+    "        Status = newStatus;\n",
+    "        Console.WriteLine($\"Статус проекта '{ProjectName}' обновлён на: {Status}\");\n",
     "    }\n",
     "\n",
-    "    public virtual void NotifyParticipants()\n",
+    "    public virtual void GetProjectDetails()\n",
     "    {\n",
-    "        Console.WriteLine($\"Уведомление участников мероприятия {EventName}:\");\n",
-    "        foreach (var participant in participants)\n",
-    "        {\n",
-    "            Console.WriteLine($\"Участник: {participant}\");\n",
-    "        }\n",
+    "        Console.WriteLine($\"ID: {ProjectId}, Название: {ProjectName}, Статус: {Status}\");\n",
     "    }\n",
     "\n",
-    "    public virtual string GetEventDetails()\n",
+    "    public virtual void AssignTeamMember(string memberName)\n",
     "    {\n",
-    "        return $\"ID: {EventId}, Название: {EventName}, Дата: {Date.ToShortDateString()}\";\n",
+    "        Console.WriteLine($\"Член команды '{memberName}' назначен на проект '{ProjectName}'.\");\n",
     "    }\n",
     "}\n",
     "\n",
-    "public class Conference : Event\n",
+    "public class ProductProject : Project\n",
     "{\n",
-    "    public int SpeakersCount { get; set; }\n",
-    "\n",
-    "    public Conference(int eventId, string eventName, DateTime date, int speakersCount)\n",
-    "        : base(eventId, eventName, date)\n",
+    "    public DateTime ExpectedCompletionDate { get; set; }\n",
+    "    public ProductProject(int id, string name, string status, DateTime expectedCompletionDate)\n",
+    "         : base(id, name, status)\n",
     "    {\n",
-    "         SpeakersCount = speakersCount;\n",
+    "        ExpectedCompletionDate = expectedCompletionDate;\n",
     "    }\n",
     "\n",
-    "    public override void NotifyParticipants()\n",
+    "    public override void UpdateStatus(string newStatus)\n",
     "    {\n",
-    "        Console.WriteLine($\"Уведомление участников конференции {EventName}:\");\n",
-    "        Console.WriteLine($\"Программа конференции с {SpeakersCount} спикерами.\");\n",
-    "        base.NotifyParticipants();\n",
+    "        Status = newStatus;\n",
+    "        Console.WriteLine($\"Статус продукта проекта '{ProjectName}' обновлён на: {Status}. Ожидаемая дата завершения: {ExpectedCompletionDate.ToShortDateString()}\");\n",
     "    }\n",
     "}\n",
     "\n",
-    "public class Festival : Event\n",
+    "public class ResearchProject : Project\n",
     "{\n",
-    "    public int BandsCount { get; set; }\n",
-    "\n",
-    "    public Festival(int eventId, string eventName, DateTime date, int bandsCount)\n",
-    "        : base(eventId, eventName, date)\n",
+    "    public double FundingAmount { get; set; }\n",
+    "    public ResearchProject(int id, string name, string status, double fundingAmount)\n",
+    "            : base(id, name, status)\n",
     "    {\n",
-    "         BandsCount = bandsCount;\n",
+    "         FundingAmount = fundingAmount;\n",
     "    }\n",
     "\n",
-    "    public override void RegisterParticipant(string participant)\n",
+    "    public override void AssignTeamMember(string memberName)\n",
     "    {\n",
-    "        Console.WriteLine($\"Фестиваль {EventName}: выберите музыкальные жанры для {participant}.\");\n",
-    "\n",
-    "base.RegisterParticipant(participant);\n",
+    "         Console.WriteLine($\"Член команды '{memberName}' с навыками в области исследований назначен на проект '{ProjectName}'.\");\n",
     "    }\n",
     "}\n",
     "\n",
-    "public class Seminar : Event\n",
+    "public class InfrastructureProject : Project\n",
     "{\n",
-    "    public List<string> Topics { get; set; }\n",
-    "\n",
-    "    public Seminar(int eventId, string eventName, DateTime date, List<string> topics)\n",
-    "        : base(eventId, eventName, date)\n",
+    "    public int ExecutionPeriod { get; set; } // Срок выполнения в месяцах\n",
+    "    public InfrastructureProject(int id, string name, string status, int executionPeriod)\n",
+    "         : base(id, name, status)\n",
     "    {\n",
-    "        Topics = topics;\n",
+    "         ExecutionPeriod = executionPeriod;\n",
     "    }\n",
     "\n",
-    "    public override string GetEventDetails()\n",
+    "    public override void GetProjectDetails()\n",
     "    {\n",
-    "        var topicsStr = string.Join(\", \", Topics);\n",
-    "        return base.GetEventDetails() + $\", Тематические области: {topicsStr}\";\n",
+    "         Console.WriteLine($\"ID: {ProjectId}, Название: {ProjectName}, Статус: {Status}, Срок выполнения: {ExecutionPeriod} месяц(ев)\");\n",
     "    }\n",
+    "\n",
     "}\n",
     "\n",
-    "class Program\n",
-    "{\n",
-    "      static void Main()\n",
-    "    {\n",
-    "    Event conference = new Conference(1, \"Научная конференция\", new DateTime(2023, 10, 22), 5);\n",
-    "conference.RegisterParticipant(\"Иванов Иван\");\n",
-    "    conference.NotifyParticipants();\n",
-    "Console.WriteLine(conference.GetEventDetails());\n",
+    "Project myproject = new Project(1, \"Проект по ООП\", \"Выполняется\");\n",
+    "ResearchProject rProject = new ResearchProject(2, \"Исследовательский проект по физике\", \"Выполняется\", 200.3);\n",
+    "myproject.UpdateStatus(\"Готов\");\n",
+    "myproject.GetProjectDetails();\n",
+    "myproject.AssignTeamMember(\"Саша\");\n",
     "\n",
-    "    Console.WriteLine();\n",
+    "rProject.GetProjectDetails();\n",
+    "rProject.AssignTeamMember(\"Вика\");\n",
+    "rProject.UpdateStatus(\"На удержании\");\n",
+    "rProject.GetProjectDetails(); \n",
     "\n",
-    "    Event festival = new Festival(2, \"Музыкальный фестиваль\", new DateTime(2023, 09, 15), 10);\n",
-    "    festival.RegisterParticipant(\"Петров Петр\");\n",
-    "    festival.NotifyParticipants();\n",
-    "Console.WriteLine(festival.GetEventDetails());\n",
     "\n",
-    "    Console.WriteLine();\n",
-    "\n",
-    "    Event seminar = new Seminar(3, \"Семинар по программированию\", new DateTime(2023, 11, 10), new List<string> { \"C#\", \"Java\", \"Python\" });\n",
-    "seminar.RegisterParticipant(\"Сидоров Сидор\");\n",
-    "    seminar.NotifyParticipants();\n",
-    "Console.WriteLine(seminar.GetEventDetails());\n",
-    "    }\n",
-    "}\n"
+    "\n"
    ]
   }
  ],
