--- a/Sprint1/Task3.ipynb
+++ b/Sprint1/Task3.ipynb
@@ -89,115 +89,147 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Статус проекта 'Новый Умный Телефон' обновлен на: Завершен. Ожидаемая дата завершения: 12/11/2024\n",
-      "ID: 1, Название: Новый Умный Телефон, Статус: Завершен, Ожидаемая дата завершения: 12/11/2024\n",
-      "Член команды 'Александра' назначен на исследовательский проект 'Исследование AI'. Требуются навыки в области научных исследований.\n",
-      "ID: 2, Название: Исследование AI, Статус: В процессе, Финансирование: ¤50,000.00\n",
-      "ID: 3, Название: Строительство моста, Статус: Запланирован, Срок выполнения: 12 месяцев\n"
+      "Статус проекта 'Проект по ООП' обновлён на: Готов\n",
+      "ID: 1, Название: Проект по ООП, Статус: Готов\n",
+      "Член команды 'Саша' назначен на проект 'Проект по ООП'.\n",
+      "ID: 2, Название: Исследовательский проект по физике, Статус: Выполняется\n",
+      "Член команды 'Вика' с навыками в области исследований назначен на проект 'Исследовательский проект по физике'.\n",
+      "Статус проекта 'Исследовательский проект по физике' обновлён на: На удержании\n",
+      "ID: 2, Название: Исследовательский проект по физике, Статус: На удержании\n",
+      "Проект 'Проект по ООП' сообщает о статусе проекта 'Исследовательский проект по физике': На удержании\n"
      ]
     }
    ],
    "source": [
     "public class Project\n",
     "{\n",
-    "    public int ProjectId { get; set; }\n",
-    "    public string ProjectName { get; set; }\n",
-    "    public string Status { get; set; }\n",
+    "    private int projectId;\n",
+    "    private string projectName;\n",
+    "    private string status;\n",
     "\n",
-    "    public Project(int projectId, string projectName, string status)\n",
+    "    public int ProjectId\n",
     "    {\n",
-    "        ProjectId = projectId;\n",
-    "        ProjectName = projectName;\n",
+    "        get { return projectId; }\n",
+    "        set { projectId = value; }\n",
+    "    }\n",
+    "\n",
+    "    public string ProjectName\n",
+    "    {\n",
+    "        get { return projectName; }\n",
+    "        set { projectName = value; }\n",
+    "    }\n",
+    "\n",
+    "    public string Status\n",
+    "    {\n",
+    "        get { return status; }\n",
+    "        set { status = value; }\n",
+    "    }\n",
+    "\n",
+    "    public Project(int id, string name, string status)\n",
+    "    {\n",
+    "        ProjectId = id;\n",
+    "        ProjectName = name;\n",
     "        Status = status;\n",
     "    }\n",
     "\n",
     "    public virtual void UpdateStatus(string newStatus)\n",
     "    {\n",
     "        Status = newStatus;\n",
-    "        Console.WriteLine($\"Статус проекта '{ProjectName}' обновлен на: {Status}\");\n",
+    "        Console.WriteLine($\"Статус проекта '{ProjectName}' обновлён на: {Status}\");\n",
     "    }\n",
     "\n",
-    "    public virtual string GetProjectDetails()\n",
+    "    public virtual void GetProjectDetails()\n",
     "    {\n",
-    "        return $\"ID: {ProjectId}, Название: {ProjectName}, Статус: {Status}\";\n",
+    "        Console.WriteLine($\"ID: {ProjectId}, Название: {ProjectName}, Статус: {Status}\");\n",
     "    }\n",
     "\n",
     "    public virtual void AssignTeamMember(string memberName)\n",
     "    {\n",
     "        Console.WriteLine($\"Член команды '{memberName}' назначен на проект '{ProjectName}'.\");\n",
     "    }\n",
+    "\n",
+    "    public void ReportProgress(Project otherProject)\n",
+    "    {\n",
+    "         Console.WriteLine($\"Проект '{ProjectName}' сообщает о статусе проекта '{otherProject.ProjectName}': {otherProject.Status}\");\n",
+    "    }\n",
     "}\n",
     "\n",
-    "public class ProductProject : Project\n",
-    "{\n",
-    "    public DateTime ExpectedCompletionDate { get; set; }\n",
-    "\n",
-    "    public ProductProject(int projectId, string projectName, string status, DateTime expectedCompletionDate)\n",
-    "    : base(projectId, projectName, status)\n",
+    "    public class ProductProject : Project\n",
     "    {\n",
-    "        ExpectedCompletionDate = expectedCompletionDate;\n",
+    "        private DateTime expectedCompletionDate;\n",
+    "        public DateTime ExpectedCompletionDate\n",
+    "        {\n",
+    "            get { return expectedCompletionDate; }\n",
+    "            set { expectedCompletionDate = value; }\n",
+    "        }\n",
+    "\n",
+    "     public ProductProject(int id, string name, string status, DateTime expectedCompletionDate)\n",
+    "        : base(id, name, status)\n",
+    "    {\n",
+    "         ExpectedCompletionDate = expectedCompletionDate;\n",
     "    }\n",
     "\n",
     "    public override void UpdateStatus(string newStatus)\n",
     "    {\n",
     "        Status = newStatus;\n",
-    "        Console.WriteLine($\"Статус проекта '{ProjectName}' обновлен на: {Status}. Ожидаемая дата завершения: {ExpectedCompletionDate.ToShortDateString()}\");\n",
+    "        Console.WriteLine($\"Статус продукта проекта '{ProjectName}' обновлён на: {Status}. Ожидаемая дата завершения: {ExpectedCompletionDate.ToShortDateString()}\");\n",
+    "    }\n",
     "    }\n",
     "\n",
-    "    public override string GetProjectDetails()\n",
+    "    public class ResearchProject : Project\n",
     "    {\n",
-    "        return base.GetProjectDetails() + $\", Ожидаемая дата завершения: {ExpectedCompletionDate.ToShortDateString()}\";\n",
+    "        private double fundingAmount;\n",
+    "        public double FundingAmount\n",
+    "    {\n",
+    "        get { return fundingAmount; }\n",
+    "        set { fundingAmount = value; }\n",
     "    }\n",
-    "}\n",
-    "   \n",
-    "public class ResearchProject : Project\n",
-    "{\n",
-    "        public decimal FundingAmount { get; set; }\n",
     "\n",
-    "        public ResearchProject(int projectId, string projectName, string status, decimal fundingAmount)\n",
-    "        : base(projectId, projectName, status)\n",
+    "    public ResearchProject(int id, string name, string status, double fundingAmount)\n",
+    "    : base(id, name, status)\n",
     "    {\n",
     "        FundingAmount = fundingAmount;\n",
     "    }\n",
     "\n",
     "    public override void AssignTeamMember(string memberName)\n",
     "    {\n",
-    "        Console.WriteLine($\"Член команды '{memberName}' назначен на исследовательский проект '{ProjectName}'. Требуются навыки в области научных исследований.\");\n",
+    "        Console.WriteLine($\"Член команды '{memberName}' с навыками в области исследований назначен на проект '{ProjectName}'.\");\n",
+    "    }\n",
     "    }\n",
     "\n",
-    "    public override string GetProjectDetails()\n",
+    "    public class InfrastructureProject : Project\n",
     "    {\n",
-    "        return base.GetProjectDetails() + $\", Финансирование: {FundingAmount:C}\";\n",
+    "        private int executionPeriod;\n",
+    "        public int ExecutionPeriod\n",
+    "    {\n",
+    "        get { return executionPeriod; }\n",
+    "        set { executionPeriod = value; }\n",
     "    }\n",
-    " }\n",
     "\n",
-    " public class InfrastructureProject : Project\n",
-    "{\n",
-    "        public int ExecutionPeriod { get; set; } \n",
-    "\n",
-    "        public InfrastructureProject(int projectId, string projectName, string status, int executionPeriod)\n",
-    "        : base(projectId, projectName, status)\n",
+    "    public InfrastructureProject(int id, string name, string status, int executionPeriod)\n",
+    "    : base(id, name, status)\n",
     "    {\n",
     "        ExecutionPeriod = executionPeriod;\n",
     "    }\n",
     "\n",
-    "    public override string GetProjectDetails()\n",
+    "    public override void GetProjectDetails()\n",
     "    {\n",
-    "        return base.GetProjectDetails() + $\", Срок выполнения: {ExecutionPeriod} месяцев\";\n",
+    "        Console.WriteLine($\"ID: {ProjectId}, Название: {ProjectName}, Статус: {Status}, Срок выполнения: {ExecutionPeriod} месяц(ев)\");\n",
     "    }\n",
-    "}\n",
-    "\n",
+    "    }\n",
     "    \n",
-    "    Project productProject = new ProductProject(1, \"Новый Умный Телефон\", \"В разработке\", new DateTime(2024, 12, 11));\n",
-    "    productProject.UpdateStatus(\"Завершен\");\n",
-    "    Console.WriteLine(productProject.GetProjectDetails());\n",
+    "Project myproject = new Project(1, \"Проект по ООП\", \"Выполняется\");\n",
+    "ResearchProject rProject = new ResearchProject(2, \"Исследовательский проект по физике\", \"Выполняется\", 200.3);\n",
+    "myproject.UpdateStatus(\"Готов\");\n",
+    "myproject.GetProjectDetails();\n",
+    "myproject.AssignTeamMember(\"Саша\");\n",
+    "rProject.GetProjectDetails();\n",
+    "rProject.AssignTeamMember(\"Вика\");\n",
+    "rProject.UpdateStatus(\"На удержании\");\n",
+    "rProject.GetProjectDetails();\n",
     "\n",
-    "    Project researchProject = new ResearchProject(2, \"Исследование AI\", \"В процессе\", 50000);\n",
-    "    researchProject.AssignTeamMember(\"Александра\");\n",
-    "    Console.WriteLine(researchProject.GetProjectDetails());\n",
-    "    Project infrastructureProject = new InfrastructureProject(3, \"Строительство моста\", \"Запланирован\", 12);\n",
-    "    Console.WriteLine(infrastructureProject.GetProjectDetails());\n",
-    "    \n",
+    "// Взаимодействие между проектами\n",
+    "myproject.ReportProgress(rProject);\n",
     "\n"
    ]
   }
